Fixed lines from appearing on mobile after selecting then deselecting a project

--- a/home/css/style.css
+++ b/home/css/style.css
@@ -135,6 +135,7 @@ header hr {
 	margin-bottom: 5px;
 	font-family: 'Roboto', sans-serif;
 	overflow: hidden;
+	border-bottom: 1px solid transparent;
 }
 
 .project-container.clicked .project {
